# AIMP4-playlist-to-m3u

./: .gitignore  README.md  aimp2m3u.py  pyproject.toml
aimp2m3u/: __main__.py  aimp.py  playlists.py
